--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -45,6 +45,7 @@
     align-items: center;
     flex-direction: column;
     gap: 60px;
+    margin-bottom: -32px;
     .form{
         max-width: 550px;
         .form-group{
@@ -56,6 +57,15 @@
                 width: 100%;
             }
         }    
+    }
+}
+
+.grid{
+    img{
+        width: 260px;
+        height: 200px;
+        object-fit: cover;
+        object-position: center;
     }
 }
 
